--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
             <div>
                 <span>Difficoltà:</span>
                 <select name="difficolta" id="difficolta">
-                    <option value="easy">Easy</option>
-                    <option value="normal">Normal</option>
-                    <option value="difficult">Difficult</option>
+                    <option value="1">Easy</option>
+                    <option value="2">Normal</option>
+                    <option value="3">Difficult</option>
                 </select>
-                <button type="button">Play</button>
+                <button type="button" id="start-btn">Play</button>
             </div>
         </nav>
     </header>
